# text2cli

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  start.sh
docs/: 20260320-v0.3-SPEC.md  20260322-v0.4-FUNCTIONAL-SPEC.md  20260322-v0.4-REQUIREMENTS.md  20260322-v0.4-SYSTEM-DESIGN.md  20260323-v0.4-EXECUTION-POOLS.md  20260323-v0.4-HARNESS-EVALUATION.md  20260323-v0.4-MICROVM-DEPLOYMENT.md  ARCHITECTURE.md  IMPLEMENTATION.md  harness_system.md
examples/: demo.sh
src/text2cli/: agent.py  cache.py  cli.py  code_executor.py  db.py  graph_agent.py  llm.py  remote_sandbox.py  sandbox_service.py  search.py  web.py  workspace_fuse.py  workspace_tools.py
src/text2cli/lang/: __init__.py  ast_nodes.py  builtins.py  interpreter.py  parser.py  tokens.py
src/text2cli/static/: app.js  index.html  styles.css
test_script/: 20260320-concurrent-llm-bench.py
tests/: test_cache.py  test_code_executor.py  test_concurrent.py  test_lang.py  test_poc.py  test_react_agent.py  test_web.py
