[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text2cli"
version = "0.1.0"
description = "Agent-native transactional workspace database POC with a CLI facade."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = [
    "langgraph>=0.4",
    "langgraph-prebuilt>=1.0",
    "langchain>=1.0",
    "langchain-openai>=0.3",
    "langchain-community>=0.3",
    "langfuse>=2.0",
    "fusepy>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
t2 = "text2cli.cli:main"
t2-web = "text2cli.web:main"
t2-sandbox = "text2cli.sandbox_service:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
text2cli = ["static/*"]
